
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int FILE ;


 int EOF ;
 int fclose (int *) ;
 int * fopen (char*,char*) ;
 int fscanf (int *,char*,...) ;
 int printf (char*,char*,void*) ;
 int strcmp (char*,char*) ;
 int strncmp (char*,char*,int) ;
 char* strrchr (char*,char) ;
 scalar_t__ strstr (char*,char*) ;

unsigned long
get_symbol(char *name)
{
 FILE *f;
 unsigned long addr;
 char dummy;
 char sname[512];
 int ret = 0, oldstyle = 0;

 f = fopen("/proc/kallsyms", "r");
 if (f == ((void*)0)) {
  f = fopen("/proc/ksyms", "r");
  if (f == ((void*)0))
   return 0;
  oldstyle = 1;
 }

 while (ret != EOF) {
  if (!oldstyle) {
   ret = fscanf(f, "%p %c %s\n", (void **) &addr, &dummy, sname);
  } else {
   ret = fscanf(f, "%p %s\n", (void **) &addr, sname);
   if (ret == 2) {
    char *p;
    if (strstr(sname, "_O/") || strstr(sname, "_S.")) {
     continue;
    }
    p = strrchr(sname, '_');
    if (p > ((char *) sname + 5) && !strncmp(p - 3, "smp", 3)) {
     p = p - 4;
     while (p > (char *)sname && *(p - 1) == '_') {
      p--;
     }
     *p = '\0';
    }
   }
  }
  if (ret == 0) {
   fscanf(f, "%s\n", sname);
   continue;
  }
  if (!strcmp(name, sname)) {
   printf("resolved symbol %s to %p\n", name, (void *) addr);
   fclose(f);
   return addr;
  }
 }
 fclose(f);

 return 0;
}
